stable/rails/tests/golden/templates/ingress.values.yaml
enabled: true
product: hpa-test
environment: production
version: 1.2.3

image:
  repository: matic/helm-charts:release-01-01-23-25
  pullPolicy: IfNotPresent

ingress:
  enabled: true
  list:
    - host: amp.matic.com
      type: internal
      annotations:
        nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
        nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout non_idempotent
        nginx.ingress.kubernetes.io/proxy-next-upstream-tries: 8
        nginx.ingress.kubernetes.io/proxy-body-size: 256m
        nginx.ingress.kubernetes.io/server-alias: "admin.matic.com, admin-live.matic.com, amp-live.matic.com, broker.matic.com, broker-live.matic.com"
        external-dns.alpha.kubernetes.io/hostname: "admin.matic.com, admin-live.matic.com, amp.matic.com, amp-live.matic.com, broker.matic.com, broker-live.matic.com"
        external-dns.alpha.kubernetes.io/ttl: "60"
      tls:
        enabled: true
        secret: matic.com-tls

    - host: amp.maticinsurance.com
      type: internal
      annotations:
        nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
        nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout non_idempotent
        nginx.ingress.kubernetes.io/proxy-next-upstream-tries: 8
        nginx.ingress.kubernetes.io/proxy-body-size: 256m
        nginx.ingress.kubernetes.io/server-alias: "admin.maticinsurance.com, broker.maticinsurance.com"
        nginx.ingress.kubernetes.io/configuration-snippet: |
          rewrite ^/crm/static/css/main.(.+).chunk.css$ /crm/static/css/main.chunk.css break;
          rewrite ^/crm/static/css/2.(.+).chunk.css$ /crm/static/css/2.chunk.css break;
          opentracing_tag "service.name" "amp-nginx";
        external-dns.alpha.kubernetes.io/hostname: "admin.maticinsurance.com, amp.maticinsurance.com, broker.maticinsurance.com"
        external-dns.alpha.kubernetes.io/ttl: "60"
        deny_locations:
          - /uploads/document
      tls:
        enabled: true
        secret: maticinsurance.com-tls

    - host: ams360.matic.com
      type: external
      path: /api/ams360/notification_events
      annotations:
        nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout non_idempotent
        nginx.ingress.kubernetes.io/proxy-next-upstream-tries: 8
        external-dns.alpha.kubernetes.io/hostname: ams360.matic.com
        external-dns.alpha.kubernetes.io/ttl: "60"
      tls:
        enabled: true
        secret: matic.com-tls

    - host: broker-wss.matic.com
      type: internal
      annotations:
        nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
        nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout non_idempotent
        nginx.ingress.kubernetes.io/proxy-next-upstream-tries: 5
        nginx.ingress.kubernetes.io/proxy-body-size: 256m
        external-dns.alpha.kubernetes.io/hostname: "broker-wss.matic.com"
        external-dns.alpha.kubernetes.io/ttl: "60"
      deny_locations:
        - /uploads/document
      tls:
        enabled: true
        secret: matic.com-tls
      serviceName: amp-rails-websocket
