stable/rails/tests/golden/templates/ingress.golden.yaml
---
# Source: rails/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpa-test-rails-ingress-internal-0
  annotations:
    kubernetes.io/ingress.class: "internal"
    external-dns.alpha.kubernetes.io/hostname: "admin.matic.com, admin-live.matic.com, amp.matic.com, amp-live.matic.com, broker.matic.com, broker-live.matic.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
    nginx.ingress.kubernetes.io/server-alias: "admin.matic.com, admin-live.matic.com, amp-live.matic.com, broker.matic.com, broker-live.matic.com"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
  labels:
    app: hpa-test-rails-ingress
    app.kubernetes.io/name: hpa-test-rails
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: hpa-test
spec:
  rules:
    - host: amp.matic.com
      http:
        paths:
          - backend:
              service:
                name: hpa-test-rails
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - amp.matic.com
      secretName: matic.com-tls
---
# Source: rails/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpa-test-rails-ingress-internal-1
  annotations:
    kubernetes.io/ingress.class: "internal"
    deny_locations: "[/uploads/document]"
    external-dns.alpha.kubernetes.io/hostname: "admin.maticinsurance.com, amp.maticinsurance.com, broker.maticinsurance.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/configuration-snippet: "rewrite ^/crm/static/css/main.(.+).chunk.css$ /crm/static/css/main.chunk.css break;\nrewrite ^/crm/static/css/2.(.+).chunk.css$ /crm/static/css/2.chunk.css break;\nopentracing_tag \"service.name\" \"amp-nginx\";\n"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
    nginx.ingress.kubernetes.io/server-alias: "admin.maticinsurance.com, broker.maticinsurance.com"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
  labels:
    app: hpa-test-rails-ingress
    app.kubernetes.io/name: hpa-test-rails
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: hpa-test
spec:
  rules:
    - host: amp.maticinsurance.com
      http:
        paths:
          - backend:
              service:
                name: hpa-test-rails
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - amp.maticinsurance.com
      secretName: maticinsurance.com-tls
---
# Source: rails/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpa-test-rails-ingress-external-2
  annotations:
    kubernetes.io/ingress.class: "external"
    external-dns.alpha.kubernetes.io/hostname: "ams360.matic.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "8"
  labels:
    app: hpa-test-rails-ingress
    app.kubernetes.io/name: hpa-test-rails
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: hpa-test
spec:
  rules:
    - host: ams360.matic.com
      http:
        paths:
          - backend:
              service:
                name: hpa-test-rails
                port:
                  number: 3000
            path: /api/ams360/notification_events
            pathType: Prefix
  tls:
    - hosts:
        - ams360.matic.com
      secretName: matic.com-tls
---
# Source: rails/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpa-test-rails-ingress-internal-3
  annotations:
    kubernetes.io/ingress.class: "internal"
    external-dns.alpha.kubernetes.io/hostname: "broker-wss.matic.com"
    external-dns.alpha.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout non_idempotent"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "5"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /uploads/document { deny all; }
  labels:
    app: hpa-test-rails-ingress
    app.kubernetes.io/name: hpa-test-rails
    app.kubernetes.io/instance: rails-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: release-01-01-23-25
    environment: production
    product: hpa-test
spec:
  rules:
    - host: broker-wss.matic.com
      http:
        paths:
          - backend:
              service:
                name: amp-rails-websocket
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - broker-wss.matic.com
      secretName: matic.com-tls
